Changelog for ghcid (* = breaking change)

    #162, always disable :set +t (which writes out types)
0.7, released 2018-04-18
    #153, show errors/warnings to freshly edited files first
    #153, set -j
    #154, improve Ctrl-C behaviour and process termination during startup
    Require extra-1.6.6
    Add --setup actions to send to ghci stdin on startup
    #152, make --output for a file ending .json produce JSON output
    Make module cycles generate well-formed Load messages
*   Add loadFilePosEnd to Load
    If a command exits unexpectedly return a failing exit code
    #120, use absolute paths everywhere, in case ghci does a cd
    Add showPaths function to exercise ":show paths"
    #127, use Loaded GHCi configuration message to add .ghci restart
    #141, restart if .ghcid changes
    #151, make "All good" green
    #109, support OverloadedStrings and RebindableSyntax together
    Remove support for GHC 7.6
    #87, enable HSPEC colors if possible (POSIX only)
    #147, move some :set flags to the command line if possible
    #148, enable -ferror-spans by default
*   #144, allow ANSI escape codes in loadMessage
    #144, use color GHC messages where possible
    #139, add --color=never to not show Bold output
    #142, add startGhciProcess which takes CreateProcess
    #146, add --max-messages=N to limit to N messages
0.6.10, released 2018-02-06
    #96, make it work even if -fdiagnostics-color is active
    #130, pass -fno-it to reduce memory leaks
    #132, work even if -fhide-source-paths is set
    Add isLoading function to test the constructor
0.6.9, released 2018-01-26
    #121, add a --poll flag to use polling instead of notifiers
    Require time-1.5 or above
    #124, add timestamp to "All good" message
    After the test completes write a message
0.6.8, released 2017-11-10
    #110, work even if -v0 is passed to ghci
    Read additional arguments from .ghcid file if present
0.6.7, released 2017-09-17